[tool.poetry]
name = "test-docker-compose-wsl2"
version = "0.1.0"
description = ""
authors = ["Igor Serko <igor.serko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-isort = "^4.0.0"
flake8-black = "^0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
